--- a/DiscoveryMonitor/Tab_Exobiology.xaml
+++ b/DiscoveryMonitor/Tab_Exobiology.xaml
@@ -10,10 +10,7 @@
              xmlns:sysglb="clr-namespace:System.Globalization;assembly=mscorlib"
              mc:Ignorable="d"
              DataContext="{Binding RelativeSource={RelativeSource Self}}"
-             d:DesignHeight="400" d:DesignWidth="800" d:MinWidth="650">
-    <!--<UserControl.Resources>
-        <d:BooleanToVisibiltyConverter x:Key="myBoolToVisibilityConverter" />
-    </UserControl.Resources>-->
+             d:DesignHeight="500" d:DesignWidth="800" d:MinWidth="650">
 
     <Grid Background="#FFE5E5E5">
         <Grid.ColumnDefinitions>
@@ -23,40 +20,51 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
+
+
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto" MinWidth="100"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto" MinWidth="100"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto" MinWidth="30"></ColumnDefinition>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="200"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" x:Name="TEST_LABEL" VerticalAlignment="Center">Current System:</Label>
-            <TextBox Grid.Column="1" x:Name="textbox_CurrentSystemName" Text="" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />
+            <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto" MinWidth="100"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto" MinWidth="100"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto" MinWidth="30"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
 
-            <!--<Rectangle Width="20"/>-->
+                <Label Grid.Column="0" VerticalAlignment="Center">Current System:</Label>
+                <!--<TextBox Grid.Column="1" x:Name="textbox_CurrentSystemName" Text="{Binding _currentBody.systemname}" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />-->
+                <TextBox Grid.Column="1" x:Name="textbox_CurrentSystemName" Text="" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />
 
-            <Label Grid.Column="2" VerticalAlignment="Center">Current Body:</Label>
-            <TextBox Grid.Column="3" x:Name="textbox_CurrentBodyShortName" Text="" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />
+                <Label Grid.Column="2" VerticalAlignment="Center">Current Body:</Label>
+                <!--<TextBox Grid.Column="3" x:Name="textbox_CurrentBodyShortName" Text="{Binding _currentBody.shortname}" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />-->
+                <TextBox Grid.Column="3" x:Name="textbox_CurrentBodyShortName" Text="" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />
 
-            <!--<Rectangle Width="20"/>-->
+                <Label Grid.Column="5" VerticalAlignment="Center">Current Body ID:</Label>
+                <!--<TextBox Grid.Column="6" x:Name="textbox_CurrentBodyId" Text="{Binding _currentBodyId}" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />-->
+                <TextBox Grid.Column="6" x:Name="textbox_CurrentBodyId" Text="" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" KeyDown="textbox_CurrentBodyId_KeyDown"/>
 
-            <Label Grid.Column="5" VerticalAlignment="Center">Current Body ID:</Label>
-            <TextBox Grid.Column="6" x:Name="textbox_CurrentBodyId" Text="" VerticalAlignment="Center" IsReadOnly="True" IsEnabled="False" />
+            </Grid>
 
-        </Grid>
-
-        <StackPanel Grid.Column="0" Grid.Row="1">
-            <DataGrid AutoGenerateColumns="False" x:Name="datagrid_bioData" SelectionChanged="datagrid_SelectionChanged" ItemsSource="{Binding}" LoadingRow="datagrid_LoadingRow" CanUserAddRows="false" CanUserDeleteRows="False" HeadersVisibility="All" SelectionUnit="FullRow">
+            <DataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="1" AutoGenerateColumns="False" x:Name="datagrid_PlanetsWithBios" SelectionMode="Single" SelectionChanged="datagrid_PlanetsWithBios_SelectionChanged" ItemsSource="{Binding}" CanUserAddRows="false" CanUserDeleteRows="False" HeadersVisibility="All" SelectionUnit="FullRow" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Auto">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -68,92 +76,132 @@
                     </Style>
                 </DataGrid.CellStyle>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Genus" IsReadOnly="True" Width="Auto" Binding="{Binding genus.localizedName}">
+                    <!--<DataGridTextColumn Header="ID" IsReadOnly="True" Width="Auto" Binding="{Binding bodyId}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Left" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>-->
+                    <DataGridTextColumn Header="Planet" IsReadOnly="True" Width="*" Binding="{Binding shortname, FallbackValue=''}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
                                 <Setter Property="HorizontalAlignment" Value="Left" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="Species" IsReadOnly="True" Width="Auto" Binding="{Binding species.localizedName}">
+                    <DataGridTextColumn Header="Bios" IsReadOnly="True" Width="Auto" Binding="{Binding surfaceSignals.reportedBiologicalCount, FallbackValue='?'}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
-                                <Setter Property="HorizontalAlignment" Value="Left" />
+                                <Setter Property="HorizontalAlignment" Value="Center" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="Variant" IsReadOnly="True" Width="Auto" Binding="{Binding variant.localizedName}">
+                    <DataGridTextColumn Header="Done" IsReadOnly="True" Width="Auto" Binding="{Binding surfaceSignals.bioSignalsComplete, FallbackValue='?'}">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
-                                <Setter Property="HorizontalAlignment" Value="Left" />
+                                <Setter Property="HorizontalAlignment" Value="Center" />
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="Samples" IsReadOnly="True" Width="Auto" Binding="{Binding samples}"/>
-                    <DataGridTextColumn Header="Distance" IsReadOnly="True" Width="Auto" Binding="{Binding genus.minimumDistanceMeters, StringFormat={}{0}m}"/>
-                    <DataGridTextColumn Header="State" IsReadOnly="True" Width="Auto" Binding="{Binding state}"/>
-                    <DataGridTextColumn Header="Value" IsReadOnly="True" Width="Auto" Binding="{Binding value}"/>
-                    <!--<DataGridTextColumn Header="Min Value" IsReadOnly="True" Width="Auto" Binding="{Binding predictedMinimumValue}"/>-->
-                    <!--<DataGridTextColumn Header="Max Value" IsReadOnly="True" Width="Auto" Binding="{Binding predictedMaximumValue}"/>-->
                 </DataGrid.Columns>
             </DataGrid>
-        </StackPanel>
 
-        <Grid Grid.Row="2" x:Name="selectedBio_Grid">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
+            <DataGrid Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" x:Name="datagrid_bioData" SelectionMode="Single" SelectionChanged="datagrid_SelectionChanged" ItemsSource="{Binding}" LoadingRow="datagrid_LoadingRow" CanUserAddRows="false" CanUserDeleteRows="False" HeadersVisibility="All" SelectionUnit="FullRow" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                <DataGrid.ColumnHeaderStyle>
+                    <Style TargetType="DataGridColumnHeader">
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                    </Style>
+                </DataGrid.ColumnHeaderStyle>
+                <DataGrid.CellStyle>
+                    <Style TargetType="DataGridCell">
+                        <Setter Property="TextBlock.TextAlignment" Value="Center" />
+                    </Style>
+                </DataGrid.CellStyle>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Genus" IsReadOnly="True" Width="*" Binding="{Binding genus.localizedName, FallbackValue=''}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="HorizontalAlignment" Value="Left" />
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Species" IsReadOnly="True" Width="*" Binding="{Binding species.localizedName, FallbackValue=''}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="HorizontalAlignment" Value="Left" />
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Variant" IsReadOnly="True" Width="*" Binding="{Binding variant.localizedName, FallbackValue=''}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="HorizontalAlignment" Value="Left" />
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Samples" IsReadOnly="True" Width="Auto" Binding="{Binding samples, FallbackValue=''}"/>
+                    <DataGridTextColumn Header="Distance" IsReadOnly="True" Width="Auto" Binding="{Binding genus.minimumDistanceMeters, StringFormat={}{0}m, FallbackValue=''}"/>
+                    <DataGridTextColumn Header="State" IsReadOnly="True" Width="Auto" Binding="{Binding state, FallbackValue=''}"/>
+                    <DataGridTextColumn Header="Value" IsReadOnly="True" Width="Auto" Binding="{Binding value, FallbackValue=''}"/>
+                </DataGrid.Columns>
+            </DataGrid>
 
-            
-            <TextBlock x:Name="textBlock_Genus" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" TextWrapping="Wrap">
-                <Run Text="{Binding genus.localizedName, Mode=OneWay, FallbackValue='Genus?'}"/>
-                <Run Text=":"/><!--<LineBreak/>-->
-                <Run Text="{Binding genus.localizedDescription, Mode=OneWay, FallbackValue=''}"/>
-                <LineBreak/>
-            </TextBlock>
-            <TextBlock x:Name="textBlock_Species" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="1" TextWrapping="Wrap">
-                <!--<Style.Triggers>
-                    <DataTrigger Binding="{Binding SomeValue}" Value=" x:Null ">
-                        <Setter Property="Visibility" Value="Visible"/>
-                    </DataTrigger>
-                </Style.Triggers>-->
-                <Run Text="The"/>
-                <Run Text="{Binding species.localizedName, Mode=OneWay, FallbackValue='Species?'}"/>
-                <Run Text="species"/><!--<LineBreak/>-->
-                <Run Text="{Binding species.localizedDescription, Mode=OneWay, FallbackValue=''}"/>
-                <LineBreak/>
-            </TextBlock>
+            <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" x:Name="selectedBio_Grid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="2" x:Name="selectedBio_samples_title" Content="Sample" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="1" Grid.Row="2" x:Name="selectedBio_x_title" Content="X" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="2" Grid.Row="2" x:Name="selectedBio_y_title" Content="Y" HorizontalContentAlignment="Center"/>
 
-            <Label Grid.Column="0" Grid.Row="3" x:Name="selectedBio_Sample1_header" Content="#1" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="1" Grid.Row="3" x:Name="selectedBio_Sample1_x" Content="" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="2" Grid.Row="3" x:Name="selectedBio_Sample1_y" Content="" HorizontalContentAlignment="Center"/>
+                <TextBlock x:Name="textBlock_Genus" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" TextWrapping="Wrap">
+                    <Run Text="{Binding genus.localizedName, Mode=OneWay, FallbackValue='Genus?'}"/>
+                    <Run Text=":"/>
+                    <Run Text="{Binding genus.localizedDescription, Mode=OneWay, FallbackValue=''}"/>
+                    <LineBreak/>
+                </TextBlock>
+                <TextBlock x:Name="textBlock_Species" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="1" TextWrapping="Wrap">
+                    <Run Text="The"/>
+                    <Run Text="{Binding species.localizedName, Mode=OneWay, FallbackValue='Species?'}"/>
+                    <Run Text="species"/>
+                    <Run Text="{Binding species.localizedDescription, Mode=OneWay, FallbackValue=''}"/>
+                    <LineBreak/>
+                </TextBlock>
 
-            <Label Grid.Column="0" Grid.Row="4" x:Name="selectedBio_Sample2_header" Content="#2" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="1" Grid.Row="4" x:Name="selectedBio_Sample2_x" Content="" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="2" Grid.Row="4" x:Name="selectedBio_Sample2_y" Content="" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="0" Grid.Row="2" x:Name="selectedBio_samples_title" Content="Sample" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="1" Grid.Row="2" x:Name="selectedBio_x_title" Content="X" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="2" Grid.Row="2" x:Name="selectedBio_y_title" Content="Y" HorizontalContentAlignment="Center"/>
 
-            <Label Grid.Column="0" Grid.Row="5" x:Name="selectedBio_Sample3_header" Content="#3" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="1" Grid.Row="5" x:Name="selectedBio_Sample3_x" Content="" HorizontalContentAlignment="Center"/>
-            <Label Grid.Column="2" Grid.Row="5" x:Name="selectedBio_Sample3_y" Content="" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="0" Grid.Row="3" x:Name="selectedBio_Sample1_header" Content="#1" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="1" Grid.Row="3" x:Name="selectedBio_Sample1_x" Content="" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="2" Grid.Row="3" x:Name="selectedBio_Sample1_y" Content="" HorizontalContentAlignment="Center"/>
+
+                <Label Grid.Column="0" Grid.Row="4" x:Name="selectedBio_Sample2_header" Content="#2" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="1" Grid.Row="4" x:Name="selectedBio_Sample2_x" Content="" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="2" Grid.Row="4" x:Name="selectedBio_Sample2_y" Content="" HorizontalContentAlignment="Center"/>
+
+                <Label Grid.Column="0" Grid.Row="5" x:Name="selectedBio_Sample3_header" Content="#3" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="1" Grid.Row="5" x:Name="selectedBio_Sample3_x" Content="" HorizontalContentAlignment="Center"/>
+                <Label Grid.Column="2" Grid.Row="5" x:Name="selectedBio_Sample3_y" Content="" HorizontalContentAlignment="Center"/>
+
+            </Grid>
+
 
         </Grid>
-        
-        <Grid Grid.Row="3">
+
+        <StackPanel Grid.Row="1"></StackPanel>
+    
+        <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -164,6 +212,7 @@
             <Button Grid.Column="0" Content="Refresh Display" Click="buttonRefresh" Height="30"/>
             <Button Grid.Column="1" Content="Force Prediction Update" Click="buttonPredict" Height="30"/>
         </Grid>
+
     </Grid>
 
 </UserControl>
